--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-  "name": "chat-app",
+  "name": "public_chat",
   "version": "1.0.0",
-  "description": "A simple chat application with Socket.io and MongoDB",
+  "description": "only chat",
   "main": "server.js",
   "scripts": {
+    "test": "dev",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Hoktech/public_chat.git"
+  },
+  "keywords": [
+    "chat",
+    "only"
+  ],
+  "author": "hok",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Hoktech/public_chat/issues"
+  },
+  "homepage": "https://github.com/Hoktech/public_chat#readme",
   "dependencies": {
     "axios": "^1.7.8",
     "cors": "^2.8.5",
     "express": "^4.21.1",
-    "http": "^0.0.1-security",
     "mongoose": "^8.8.3",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
     "socket.io": "^4.8.1"
-  },
-  "devDependencies": {
-    "netlify-cli": "^17.38.0"
-  },
-  "engines": {
-    "node": ">=14.0.0"
-  },
-  "author": "",
-  "license": "ISC"
+  }
 }
